Bug 148923 - FILEOPEN: PPTX: Incorrect image in media file
Summary: FILEOPEN: PPTX: Incorrect image in media file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0 target:7.3.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-04 09:15 UTC by Xisco Faulí
Modified: 2022-05-20 10:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (201.91 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-05-04 09:15 UTC, Xisco Faulí
Details
Comparison LibreOffice 7.4 master and PP 2016 (203.12 KB, image/png)
2022-05-04 09:16 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-05-04 09:15:22 UTC
Created attachment 179912 [details]
sample file

Steps to reproduce:
1. Open attached document

-> The image is incorrect. See comparison

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 75fe4051320ef9b1f4323fa958e8df3db2066882
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-05-04 09:16:41 UTC
Created attachment 179913 [details]
Comparison LibreOffice 7.4 master and PP 2016
Comment 2 Xisco Faulí 2022-05-04 09:17:36 UTC
Regression introduced by:

author	Tünde Tóth <toth.tunde@nisz.hu>	2022-04-06 16:18:29 +0200
committer	László Németh <nemeth@numbertext.org>	2022-04-26 17:41:27 +0200
commit 9564747d2fd5d2c859a359dd7fa6242c6859c0d7 (patch)
tree b45d423774634a3e51518f50830dd1534af18e0e
parent 5b27a93f58671b7546414cfff673179c3ff0550f (diff)
tdf#53970 PPTX: fix import of linked media files

Bisected with: bibisect-linux64-7.4

Adding Cc: to Tünde Tóth
Comment 3 Commit Notification 2022-05-19 08:26:52 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4ab6a4693c0f3147b086173d5a9787f1f0eee34

tdf#148923 PPTX import: fix incorrect image in media file

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-05-20 10:07:59 UTC
Verified in:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 09822cf77cdbe32b03553cd05154100b5f2591d0
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2022-05-20 10:09:10 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/47b0a2935bf1b73647326cb1748b48cb0aeeeaa6

tdf#148923 PPTX import: fix incorrect image in media file

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.