avmedia/source/viewer/mediawindow.cxx
@@ -363,7 +363,9 @@ uno::Reference< media::XPlayer > MediaWindow::createPlayer( const OUString& rURL
     return priv::MediaWindowImpl::createPlayer( rURL, rReferer, pMimeType );
 }
 
-uno::Reference< graphic::XGraphic > MediaWindow::grabFrame(const css::uno::Reference<css::media::XPlayer>& xPlayer)
+uno::Reference<graphic::XGraphic>
+MediaWindow::grabFrame(const uno::Reference<media::XPlayer>& xPlayer,
+                       const uno::Reference<graphic::XGraphic>& rGraphic)
 {
     uno::Reference< graphic::XGraphic > xRet;
     std::unique_ptr< Graphic > xGraphic;
@@ -401,7 +403,11 @@ uno::Reference< graphic::XGraphic > MediaWindow::grabFrame(const css::uno::Refer
     }
 
     if (xGraphic)
+    {
+        if (rGraphic)
+            xGraphic.reset(new Graphic(rGraphic));
         xRet = xGraphic->GetXGraphic();
+    }
 
     return xRet;
 }
